--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "normalize.css": "^8.0.1",
+    "nouislider": "^15.7.2",
     "osc": "2.4.4",
     "three": "^0.156.1"
   },
