--- a/Server/package.json
+++ b/Server/package.json
@@ -1,24 +1,32 @@
 {
-    "name": "server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "web_server.js",
-    "engines": {
-        "node": ">=16.x",
-        "npm": ">=7.x"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node web_server.js"
-    },
-    "author": "Ben Johansen",
-    "license": "MIT",
-    "type": "module",
-    "dependencies": {
-        "express": "^4.18.2",
-        "osc": "^2.4.4",
-        "osc-js": "^2.4.0",
-        "socket.io": "^4.6.1",
-        "ws": "^8.16.0"
-    }
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "web_server.js",
+  "bin": {
+    "server": "./web_server.js"
+  },
+  "engines": {
+    "node": ">=16.x",
+    "npm": ">=7.x"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node web_server.js"
+  },
+  "author": "Lennart Sailer",
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.18.2",
+    "osc": "^2.4.4",
+    "osc-js": "^2.4.0",
+    "socket.io": "^4.6.1",
+    "ws": "^8.16.0"
+  },
+  "pkg": {
+    "targets": [
+      "node18-win-x64",
+      "node18-macos-x64"
+    ]
+  }
 }
